--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "axios": "^1.6.1",
+    "date-fns": "^2.30.0",
+    "formik": "^2.4.5",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
@@ -22,7 +25,8 @@
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +53,8 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.7"
+    "@types/react-datepicker": "^4.19.3",
+    "@types/uuid": "^9.0.7",
+    "@types/yup": "^0.32.0"
   }
 }
