client side login and register

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,5 @@
   "ConnectionStrings": {
     "DefaultConnection" : "Data Source=reactivities.db"
   },
-  "TokenKey" : "super secret key"
+  "TokenKey" : "super large m++++++@@@@@@@ yuyueieoè'è'è'è33747788599599 max key bite777777"
 }
