add profile page

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Cloudinary" : {
+    "CloudName" : "dyjvoskwy",
+    "ApiKey" : "317739992122345",
+     "ApiSecret" : "_DkP811RAIr9uRd6APJZDEFAJag"
+  },
   "AllowedHosts": "*"
 }
