--- a/client-app/package.json
+++ b/client-app/package.json
@@ -16,8 +16,10 @@
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
