--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,17 +10,21 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.15",
+    "@types/react-infinite-scroller": "^1.2.5",
     "axios": "^1.6.1",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-cropper": "^2.3.3",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
